force-app/main/default/objects/OCIInteractionOrderItemSummary__c/OCIInteractionOrderItemSummary__c.object-meta.xml
<CustomObject>
    <label>OCI Interaction Order Item Summary</label>
    <nameField>
        <displayFormat>OCI-{0000}</displayFormat>
        <label>Interaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OCI Interaction Order Item Summaries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>