force-app/main/default/objects/OCIInteractionOrderItemSummary__c/fields/Associated_Item_Inventory__c.field-meta.xml
<CustomField>
    <fullName>Associated_Item_Inventory__c</fullName>
    <label>Associated Item Inventory</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IncludedInMainInventory</fullName>
            </value>
            <value>
                <fullName>NotIncludedInMainInventory</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>