force-app/main/default/objects/OCIInteractionOrderItemSummary__c/fields/FromLocation__c.field-meta.xml
<CustomField>
    <fullName>FromLocation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>From Location</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>OCI Order Item Summary Interaction From Locations</relationshipLabel>
    <relationshipName>OCIOISInteractionFromLocations</relationshipName>
    <type>Lookup</type>
</CustomField>