force-app/main/default/objects/OCIInteractionOrderItemSummary__c/fields/FromLocationGroup__c.field-meta.xml
<CustomField>
    <fullName>FromLocationGroup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>From Location Group</label>
    <referenceTo>LocationGroup</referenceTo>
    <relationshipLabel>OCI Order Item Summary Interaction From Location Groups</relationshipLabel>
    <relationshipName>OCIOISFromLocationGroups</relationshipName>
    <type>Lookup</type>
</CustomField>