force-app/main/default/objects/OCIInteractionOrderItemSummary__c/fields/FulfillmentOrder__c.field-meta.xml
<CustomField>
    <fullName>FulfillmentOrder__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Fulfillment Order</label>
    <referenceTo>FulfillmentOrder</referenceTo>
    <relationshipLabel>OCI Interaction Order Item Summaries</relationshipLabel>
    <relationshipName>OCIInteractionOrderItemSummaries</relationshipName>
    <type>Lookup</type>
</CustomField>