force-app/main/default/objects/OCIInteractionOrderItemSummary__c/fields/HasNotFulfillmentOrder__c.field-meta.xml
<CustomField>
    <fullName>HasNotFulfillmentOrder__c</fullName>
    <formula>ISBLANK(FulfillmentOrder__c )</formula>
    <label>Has Not Fulfillment Order</label>
    <type>Checkbox</type>
</CustomField>