force-app/main/default/objects/OCIInteractionOrderItemSummary__c/fields/Main_Order_Item_Summary__c.field-meta.xml
<CustomField>
    <fullName>Main_Order_Item_Summary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Main Order Item Summary</label>
    <referenceTo>OrderItemSummary</referenceTo>
    <relationshipLabel>OCI Interaction Order Item Summaries (Main Order Item Summary)</relationshipLabel>
    <relationshipName>OCI_Interaction_Order_Item_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>