force-app/main/default/objects/OCIInteractionOrderItemSummary__c/fields/OCIInteractionOrderSummary__c.field-meta.xml
<CustomField>
    <fullName>OCIInteractionOrderSummary__c</fullName>
    <label>OCI Interaction Order Summary</label>
    <referenceTo>OCIInteractionOrderSummary__c</referenceTo>
    <relationshipLabel>OCI Interaction Order Item Summaries</relationshipLabel>
    <relationshipName>OCIInteractionOrderItemSummaries</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>