force-app/main/default/objects/OCIInteractionOrderItemSummary__c/fields/OrderItemSummary__c.field-meta.xml
<CustomField>
    <fullName>OrderItemSummary__c</fullName>
    <label>Order Product Summary</label>
    <referenceTo>OrderItemSummary</referenceTo>
    <relationshipLabel>OCI Interaction Order Item Summaries</relationshipLabel>
    <relationshipName>OCIInteractionOrderItemSummaries</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>