force-app/main/default/objects/OCIInteractionOrderItemSummary__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>REQUESTED</fullName>
                <default>true</default>
                <label>REQUESTED</label>
            </value>
            <value>
                <fullName>COMPLETED_SUCCEED</fullName>
            </value>
            <value>
                <fullName>COMPLETED_FAIL</fullName>
            </value>
            <value>
                <fullName>ABANDONED</fullName>
            </value>
            <value>
                <fullName>PENDING</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>