force-app/main/default/objects/OCIInteractionOrderItemSummary__c/fields/ToLocation__c.field-meta.xml
<CustomField>
    <fullName>ToLocation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>To Location</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>OCI Order Item Summary Interaction To Locations</relationshipLabel>
    <relationshipName>OCIOISInteractionToLocations</relationshipName>
    <type>Lookup</type>
</CustomField>