force-app/main/default/objects/OCIInteractionOrderItemSummary__c/fields/ToLocationGroup__c.field-meta.xml
<CustomField>
    <fullName>ToLocationGroup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>To Location Group</label>
    <referenceTo>LocationGroup</referenceTo>
    <relationshipLabel>OCI Order Item Summary Interaction To Location Groups</relationshipLabel>
    <relationshipName>OCIOISInteractionToLocationGroups</relationshipName>
    <type>Lookup</type>
</CustomField>