force-app/main/default/objects/OCIInteractionOrderItemSummary__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TRANSFER_ROUTING</fullName>
                <default>true</default>
                <label>TRANSFER_ROUTING</label>
            </value>
            <value>
                <fullName>RELEASE</fullName>
            </value>
            <value>
                <fullName>TRANSFER_MOVING</fullName>
            </value>
            <value>
                <fullName>CREATE_RESERVATION</fullName>
            </value>
            <value>
                <fullName>RELEASE_RESERVATION</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>