force-app/main/default/objects/OCIInteractionOrderItemSummary__c/validationRules/MatchParentStatus.validationRule-meta.xml
<ValidationRule>
    <fullName>MatchParentStatus</fullName>
    <active>true</active>
    <errorConditionFormula>TEXT( Status__c) &lt;&gt; TEXT(  OCIInteractionOrderSummary__r.Status__c  )</errorConditionFormula>
    <errorMessage>The Status must match the parent match</errorMessage>
</ValidationRule>