force-app/main/default/objects/OCIInteractionOrderItemSummary__c/validationRules/MatchParentType.validationRule-meta.xml
<ValidationRule>
    <fullName>MatchParentType</fullName>
    <active>true</active>
    <errorConditionFormula>TEXT(Type__c)  &lt;&gt;  TEXT(OCIInteractionOrderSummary__r.Type__c)</errorConditionFormula>
    <errorMessage>The type must match the parent type</errorMessage>
</ValidationRule>